# jee-knowledge-graph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  destroy-infra.yml
data/concepts/: expert_concepts.sample.jsonl  jee_advanced_physics_syllabus_2026_coverage.json  physics_atomic_concepts_overlay.jsonl  physics_concepts.draft.jsonl  physics_concepts.enriched.jsonl  physics_prerequisite_edges.diagnostic.jsonl  physics_prerequisite_edges.draft.jsonl  physics_prerequisite_edges.enriched.jsonl  physics_prerequisite_overlay.jsonl
docs/: concept-dependency-graph.md
scripts/: apply_physics_prerequisite_overlay.py  build_physics_hierarchy_candidates.py  export_physics_graph_jsonl.py  extract_local_syllabus_text.py  extract_physics_concept_sources.py  filter_diagnostic_prerequisite_edges.py  generate_physics_concept_graph_input.py  import_physics_graph_to_dynamodb.py  prepare_high_yield_micro_concept_split_tasks.py  prepare_physics_concept_extraction_tasks.py  validate_physics_syllabus_coverage.py
src/jee_knowledge_graph/: __init__.py  io.py  models.py  source_extract.py
terraform/: main.tf  outputs.tf  variables.tf
tests/concepts/: test_apply_physics_prerequisite_overlay.py  test_concept_extraction_tasks.py  test_expert_concepts.py  test_export_physics_graph_jsonl.py  test_extract_local_syllabus_text.py  test_filter_diagnostic_prerequisite_edges.py  test_generate_physics_concept_graph_input.py  test_high_yield_micro_concept_split_tasks.py  test_import_physics_graph_to_dynamodb.py  test_source_extract.py  (+1 more)
(+17 files in other folders)
